# libopenaptx

./: CMakeLists.txt  README.md
pkgconfig/: CMakeLists.txt  libopenaptx.pc.in
